--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=entregasGestor
+spring.datasource.url=jdbc:mysql://localhost:3306/entregasgestor
+spring.datasource.username=root
+spring.datasource.password=123456789!
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=update
