--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=entregasGestor
-spring.datasource.url=jdbc:mysql://localhost:3306/entregasgestor
+spring.datasource.url=jdbc:mysql://localhost:3306/deliverymanager
 spring.datasource.username=root
 spring.datasource.password=123456789!
 
